// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price> inject <Text> properties 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 18,
        },
        false,
        Object {},
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 18,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    eur
  </Text>
</View>
`;

exports[`<Price> renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
  >
    0
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    €
  </Text>
</View>
`;

exports[`<Price> when {caption} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    from
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
  >
    0
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    €
  </Text>
</View>
`;

exports[`<Price> when {fixed} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
  >
    19.12
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    €
  </Text>
</View>
`;

exports[`<Price> when {style} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {
          "color": "green",
          "fontSize": 32,
          "fontWeight": "800",
        },
      ]
    }
  >
    19
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {
          "color": "green",
          "fontSize": 32,
          "fontWeight": "800",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    €
  </Text>
</View>
`;

exports[`<Price> when {symbol} (left) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    $
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
  >
    4
  </Text>
</View>
`;

exports[`<Price> when {symbol} (right) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    eur
  </Text>
</View>
`;

exports[`<Price> when {value} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
  >
    19
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -0.83,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
  >
    €
  </Text>
</View>
`;
